--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "grommet": "^2.7.11",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-ga": "^2.7.0",
     "react-scripts": "3.2.0",
     "styled-components": "^4.4.1"
   },
